# ai-toolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ai_toolkit/: cli.py
ai_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ai_toolkit/commands/: github_actions.py  mcp.py  workflows.py
ai_toolkit/utils/: mcp_config.py
config/: mcp-servers.example.json
docs/: mcp-guide.md  multi-agent-patterns.md
prompts/: claude-dekstop-custom-instructions.md  code-review-yagni.md
recipes/: ai-cli-updates.md  claude-code-review.md  claude-md-practices.md  rtk-token-saving.md
scripts/: install-rtk-for-claude.sh  install-rtk-for-codex.sh  save-codex-token-context.sh  update-ai-clis.sh
tools/: __init__.py
tools/mcp/: README.md  mcp_config.py
