[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolkit"
version = "0.1.0"
description = "Small MCP registry and install helpers for local AI clients"
requires-python = ">=3.10"
authors = [{name = "Dylan McDonald", email = "dylmcdona@icloud.com"}]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
mcp-tool = "tools.mcp.mcp_config:main"

[tool.setuptools]
packages = ["tools", "tools.mcp"]
